sw/CppunitTest_sw_a11y.mk
@@ -12,6 +12,7 @@ $(eval $(call gb_CppunitTest_CppunitTest,sw_a11y))
 $(eval $(call gb_CppunitTest_add_exception_objects,sw_a11y, \
 	sw/qa/extras/accessibility/basics \
 	sw/qa/extras/accessibility/dialogs \
+	sw/qa/extras/accessibility/unicode \
 ))
 
 $(eval $(call gb_CppunitTest_use_libraries,sw_a11y, \
